--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h3 class="header">Contents</h3>
+        <h3 class="header">Methanol Production Simulation</h3>
         <p class="header"><a href="#process-description">Process Description</a></p>
         <p class="header"><a href="#process-flowsheet">Process Flowsheet</a></p>
         <p class="header"><a href="#operating-condition">Operating Conditions</a></p>
         <p class="header"><a href="#analysis-and-discussion">Analysis and Discussion</a></p>
         <p class="header"><a href="#references">References</a></p>
-        
+
         <ul>
           <li class="download"><a class="buttons" href="/assets/bkp/.bkp">Download .bkp</a></li>
         </ul>
